# dev-to-dev-MCP

./: .dockerignore  .env.example  .gitignore  DEMO.md  Dockerfile  README.md  SPEC.md  pyproject.toml
.qwen/agents/: modular-architecture-planner.md  pytest-test-engineer.md  python-mcp-coder.md  tech-docs-writer.md
ai-logs/: 2026-02-26-1308-iteration-1-skeleton.md  2026-02-26-testing-health-endpoint.md  2026-02-27-1532-spec-update.md  2026-02-27-1827-iteration-1-complete.md  2026-02-27-2102-parser-tests.md  2026-02-27-2205-non-conventional-commits.md  2026-02-27-2253-analyzer-review.md  2026-02-27-2256-analyzer-tests.md  2026-02-27-2316-iteration-2-complete.md  2026-02-27-2345-demo-project-script-decision.md  2026-02-27-architecture-decision.md  2026-02-27-fix-is-wip.md  2026-02-27-iteration-2-plan.md  2026-02-27-spec-refactor.md  2026-02-28-0030-integration-tests-demo-project.md  2026-02-28-0045-integration-testing-complete.md  2026-02-28-1015-demo-project-script-created.md  2026-02-28-1055-iteration-3-plan.md  2026-02-28-1329-template-service-testing-report.md  2026-02-28-1415-date-grouping-fix.md
docs/: demo-screenshot-1.md
scripts/: create_demo_project.sh  entrypoint.sh
src/git_changelog_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  (+1 more)
templates/: changelog.json.j2  changelog.md.j2  keepachangelog.md.j2  release_notes.md.j2
tests/: my_md.md  my_test.py  test_ai.py  test_ai_debug.py  test_analyzer.py  test_demo_project.py  test_fallback.py  test_generate_changelog_tool.py  test_grouping_by_date.py  test_parser_service.py  test_template_service.py
(+10 files in other folders)
